[package]
name = "avro_derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = {version="1.0.60",features=["full","fold"]}
quote = "1.0.8"
proc-macro2 = "1.0"
serde = { version = "1.0.130", features = ["derive"] }

[dev-dependencies]
apache-avro = { path = "../avro" }
