# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "apache-avro-derive"
version = "0.14.0"
authors = ["Apache Avro team <dev@avro.apache.org>"]
description = "A library for deriving Avro schemata from Rust structs and enums"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/apache/avro"
edition = "2018"
keywords = ["avro", "data", "serialization", "derive"]
categories = ["encoding"]
documentation = "https://docs.rs/apache-avro-derive"

[lib]
proc-macro = true

[dependencies]
darling = "0.14.0"
quote = "1.0.18"
syn = {version= "1.0.91", features=["full", "fold"]}
proc-macro2 = "1.0.37"
serde_json = "1.0.79"

[dev-dependencies]
serde = { version = "1.0.136", features = ["derive"] }
apache-avro = { version = "0.14.0", path = "../avro", features = ["derive"] }
