# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "apache-avro-derive"
version = "0.15.0"
authors = ["Apache Avro team <dev@avro.apache.org>"]
description = "A library for deriving Avro schemata from Rust structs and enums"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/apache/avro"
edition = "2018"
keywords = ["avro", "data", "serialization", "derive"]
categories = ["encoding"]
documentation = "https://docs.rs/apache-avro-derive"

[lib]
proc-macro = true

[dependencies]
darling = { default-features = false, version = "0.14.1" }
proc-macro2 = { default-features = false, version = "1.0.46" }
quote = { default-features = false, version = "1.0.21" }
serde_json = { default-features = false, version = "1.0.85", features = ["std"] }
syn = { default-features = false, version = "1.0.102", features = ["full", "fold"] }

[dev-dependencies]
apache-avro = { default-features = false, path = "../avro", features = ["derive"] }
proptest = { default-features = false, version = "1.0.0", features = ["std"] }
serde = { default-features = false, version = "1.0.145", features = ["derive"] }
