# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "apache-avro-test-helper"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Apache Avro tests helper."
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords = ["avro", "data", "serialization", "test"]
categories.workspace = true
documentation = "https://docs.rs/apache-avro-test-helper"


[dependencies]
anyhow = { default-features = false, version = "1.0.74", features = ["std"] }
color-backtrace = { default-features = false, version = "0.5.1" }
ctor = { default-features = false, version = "0.2.4" }
env_logger = { default-features = false, version = "0.10.0" }
lazy_static = { default-features = false, version = "1.4.0" }
log = { default-features = false, version = "0.4.20" }
ref_thread_local = { default-features = false, version = "0.1.1" }
