# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "hello-wasm"
version = "0.1.0"
authors = ["Apache Avro team <dev@avro.apache.org>"]
description = "A demo project for testing apache_avro in WebAssembly"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/apache/avro"
edition = "2018"
keywords = ["avro", "data", "serialization", "wasm", "web assembly"]
categories = ["encoding"]
documentation = "https://docs.rs/apache-avro"
publish = false


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
apache-avro = { path = "../avro" }
serde = { default-features = false, version = "1.0.140", features = ["derive"] }
wasm-bindgen = "0.2.82"

[dev-dependencies]
console_error_panic_hook = { version = "0.1.6" }
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
